Updated HybridAlias passes to commit a62becc88680f685179824ce0fad913c5838f34f

--- a/HybridAlias/CMakeLists.txt
+++ b/HybridAlias/CMakeLists.txt
@@ -2,6 +2,15 @@ cmake_minimum_required(VERSION 2.8)
 
 project("GCG hybrid alias")
 
+## LLVMs module support
+find_package(LLVM REQUIRED CONFIG)
+
+list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+include(AddLLVM)
+
+add_definitions(${LLVM_DEFINITIONS})
+include_directories(${LLVM_INCLUDE_DIRS})
+
 ### set compilers
 set(CMAKE_C_COMPILER   /usr/bin/clang)
 set(CMAKE_CXX_COMPILER /usr/bin/clang++)
