--- a/HybridAlias/ilc/CMakeLists.txt
+++ b/HybridAlias/ilc/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
-find_package(LLVM REQUIRED CONFIG)
+add_library(ILC MODULE ILC.cpp BasePtrInfo.cpp)
 
-## LLVMs module support
-list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
-include(AddLLVM)
-
-add_definitions(${LLVM_DEFINITIONS})
-include_directories(${LLVM_INCLUDE_DIRS})
-
-add_library(ILC MODULE ILC.cpp)
+target_link_libraries (ILC
+	## we use LLVMs YAML parsing but the symbols are not available in opt,
+	## but we can't just link in libLLVMSupport.a
+	## see http://lists.cs.uiuc.edu/pipermail/llvmdev/2010-June/032508.html
+	## TODO: Maybe use another YAML library like cpp-yaml
+	"${LLVM_BUILD_LIBRARY_DIR}/Support/CMakeFiles/LLVMSupport.dir/YAMLParser.cpp.o"
+	"${LLVM_BUILD_LIBRARY_DIR}/Support/CMakeFiles/LLVMSupport.dir/YAMLTraits.cpp.o"
+)
 
 ## eventually we should use LLVMs cmake infrastructure for registering plugins
 #add_llvm_loadable_module(ILC ILC.cpp)
