--- a/HybridAlias/google-benchmark/.gitignore
+++ b/HybridAlias/google-benchmark/.gitignore
@@ -4,23 +4,21 @@
 *.dylib
 *.cmake
 !/cmake/*.cmake
-*.ll
-!/test/*.ll
 *~
+/test/benchmark_test
+/test/re_test
+/Testing
 CMakeCache.txt
 CMakeFiles/
-#Makefile
+Makefile
 bin/
-build/
-build-*/
 cmake_install.cmake
 lib/
 tags
 .ycm_extra_conf.pyc
+
 .ninja_deps
 .ninja_log
 build.ninja
 install_manifest.txt
 rules.ninja
-*.sublime-project
-*.sublime-workspace
