--- a/HybridAlias/ilc/CMakeLists.txt
+++ b/HybridAlias/ilc/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library(ILC MODULE ILC.cpp BasePtrInfo.cpp)
+add_library(ILC MODULE ILC.cpp Common.cpp TraceLoopAlias.cpp FullInstNamer.cpp BasePtrInfo.cpp)
+
+if("${LLVM_BUILD_LIBRARY_DIR}" STREQUAL "")
+	message(FATAL_ERROR "\${LLVM_BUILD_LIBRARY_DIR} not set, configure with proper CMAKE_PREFIX_PATH")
+endif()
 
 target_link_libraries (ILC
 	## we use LLVMs YAML parsing but the symbols are not available in opt,
@@ -11,6 +15,19 @@ target_link_libraries (ILC
 	"${LLVM_BUILD_LIBRARY_DIR}/Support/CMakeFiles/LLVMSupport.dir/YAMLTraits.cpp.o"
 )
 
-## eventually we should use LLVMs cmake infrastructure for registering plugins
-#add_llvm_loadable_module(ILC ILC.cpp)
+add_library(FullInstNamer MODULE FullInstNamer.cpp)
 
+add_executable(print-base-ptrs PrintBasePtrs.cpp FullInstNamer.cpp BasePtrInfo.cpp Common.cpp)
+
+target_link_libraries(print-base-ptrs
+	# LLVM
+	LLVMCore
+	LLVMBitReader LLVMBitWriter
+	LLVMIRReader
+	LLVMTransformUtils LLVMAnalysis
+	LLVMSupport
+	LLVMOption
+	LLVMDebugInfo
+	# std libs
+	pthread dl m
+)
