Copied region cloning into polly tree and added patch for fixing phi's in successors of region.
--HG--
extra : rebase_source : 79c9009d7089558baccec438e81309393e0467f1
extra : amend_source : 2a6632ee2a105b084c9b78aa46930604667b193d
extra : source : 0f1e009a646352cf33b8017ca891314d8ba0683f

--- a/llvm/tools/polly/lib/CMakeLists.txt
+++ b/llvm/tools/polly/lib/CMakeLists.txt
@@ -56,6 +56,8 @@ add_polly_library(Polly
   Transform/IndVarSimplify.cpp
   Transform/ScheduleOptimizer.cpp
   ${POLLY_PLUTO_FILES}
+  Transform/RegionCloningPass.cpp
+  Transform/CloneRegion.cpp
   )
 
 # Build a monolithic Polly.a and a thin module LLVMPolly.moduleext that links to
