Added skeleton alias analysis that gives no alias information for cloned instructions.

--- a/llvm/tools/polly/lib/CMakeLists.txt
+++ b/llvm/tools/polly/lib/CMakeLists.txt
@@ -58,6 +58,7 @@ add_polly_library(Polly
   ${POLLY_PLUTO_FILES}
   Transform/RegionCloningPass.cpp
   Transform/CloneRegion.cpp
+  Analysis/IgnoreClonesAA.cpp
   )
 
 # Build a monolithic Polly.a and a thin module LLVMPolly.moduleext that links to
