Added IgnoreClonesAA to make build system.
--HG--
extra : source : 9fb593ea01e84da1b62b6acc7880fd1c3e6709dc

--- a/llvm/tools/polly/lib/Makefile
+++ b/llvm/tools/polly/lib/Makefile
@@ -66,6 +66,7 @@ SOURCES= Polly.cpp \
 	 Transform/ScheduleOptimizer.cpp \
 	 Transform/RegionCloningPass.cpp \
 	 Transform/CloneRegion.cpp \
+	 Analysis/IgnoreClonesAA.cpp \
 	 ${GPGPU_FILES} \
 	 ${ISL_CODEGEN_FILES} \
          ${CLOOG_FILES} \
