--- a/tests/rodinia_3.0/sequential/heartwall/AVI/makefile
+++ b/tests/rodinia_3.0/sequential/heartwall/AVI/makefile
@@ -1,12 +1,14 @@
+CC ?= gcc
+
 all: avimod.o avilib.o
 
 # compile supporting function file into object (binary)
 avimod.o: avilib.h avimod.c 
-	gcc -c avimod.c
+	$(CC) -c avimod.c
 
 # compile supporting function file into object (binary)
 avilib.o: avilib.h avilib.c
-	gcc -c avilib.c
+	$(CC) -c avilib.c
 
 # delete files
 clean:
