Added `sum' benchmark and tweaked double_memset benchmark.
The sum benchmark computes some value in a loop and uses that value.
This makes sure our phi generation for loop cloning is correct.

--- a/HybridAlias/benchmark/CMakeLists.txt
+++ b/HybridAlias/benchmark/CMakeLists.txt
@@ -12,6 +12,7 @@ set(BENCHMARKS
 	double_memset.cpp
 	dotprod.cpp
 	fft.cpp
+	sum.cpp
 )
 
 ## split command line args because add_custom_command excepts a list
