--- a/llvm/lib/Transforms/Instrumentation/CMakeLists.txt
+++ b/llvm/lib/Transforms/Instrumentation/CMakeLists.txt
@@ -7,6 +7,7 @@ add_llvm_library(LLVMInstrumentation
   MemorySanitizer.cpp
   Instrumentation.cpp
   ThreadSanitizer.cpp
+  AliasTracer.cpp
   )
 
 add_dependencies(LLVMInstrumentation intrinsics_gen)
