--- a/llvm/tools/CMakeLists.txt
+++ b/llvm/tools/CMakeLists.txt
@@ -52,9 +52,9 @@ add_llvm_tool_subdirectory(llvm-c-test)
 add_llvm_tool_subdirectory(obj2yaml)
 add_llvm_tool_subdirectory(yaml2obj)
 
-add_llvm_tool_subdirectory(perf-instrument-regions)
-
 add_llvm_tool_subdirectory(alias-instrument)
+add_llvm_tool_subdirectory(alias-profiler)
+add_llvm_tool_subdirectory(perf-instrument-regions)
 
 if(NOT CYGWIN AND LLVM_ENABLE_PIC)
   add_llvm_tool_subdirectory(lto)
