Changing Rodinia benchmarks to measure only core computation time

--- a/tests/rodinia_3.0/sequential/streamcluster/Makefile
+++ b/tests/rodinia_3.0/sequential/streamcluster/Makefile
@@ -1,15 +1,11 @@
 CXX ?= g++
 
-PREFIX=${PARSECDIR}/pkgs/kernels/streamcluster/inst/${PARSECPLAT}
+all: cpu
 
-TARGET_O = sc_omp
-
-all: omp
-
-omp:
-	$(CXX) -o $(TARGET_O) streamcluster_omp.cpp
+cpu:
+	$(CXX) streamcluster_original.cpp -o sco
 
 
 clean:
-	rm -f *.o *~ *.txt sc_omp
+	rm -f *.o *~ *.txt sco
 	
