--- a/tests/rodinia_3.0/openmp/streamcluster/Makefile
+++ b/tests/rodinia_3.0/openmp/streamcluster/Makefile
@@ -1,24 +1,11 @@
-PREFIX=${PARSECDIR}/pkgs/kernels/streamcluster/inst/${PARSECPLAT}
+CXX ?= g++
 
-TARGET_C = sc_cpu
-
-TARGET_O = sc_omp
-
-ifdef version
-  ifeq "$(version)" "parallel"
-    CXXFLAGS :=	$(CXXFLAGS) -DENABLE_THREADS -pthread
-  endif
-endif
-
-all: cpu omp
+all: cpu
 
 cpu:
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) streamcluster_original.cpp -o $(TARGET_C) $(LIBS) -DENABLE_THREADS -pthread
-
-omp:
-	g++ -O3 -fopenmp -o $(TARGET_O) streamcluster_omp.cpp
+	$(CXX) streamcluster_original.cpp -o sco
 
 
 clean:
-	rm -f *.o *~ *.txt sc_cpu sc_omp
+	rm -f *.o *~ *.txt sco
 	
