--- a/alias_profiler/src/CMakeLists.txt
+++ b/alias_profiler/src/CMakeLists.txt
@@ -7,15 +7,15 @@ cmake_minimum_required(VERSION 2.8)
 
 add_library(memtrack        SHARED memtrack.c misc.c)
 add_library(memtrack_static STATIC memtrack.c misc.c)
-add_library(alias_profiler  SHARED alias_profiler.c memtrack.c misc.c)
+add_library(alias-profiler  SHARED alias_profiler.c memtrack.c misc.c)
 
 target_link_libraries(memtrack        dl)
 target_link_libraries(memtrack_static dl)
-target_link_libraries(alias_profiler  dl)
+target_link_libraries(alias-profiler  dl)
 
 ### create install target
 
 install(
-	FILES memtrack memtrack_static alias_profiler
+	FILES memtrack memtrack_static alias-profiler
 	LIBRARY DESTINATION lib
 )
